# yark

./: .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE_APACHE  Makefile  Pipfile  README.md  example.cs  flake.nix  pyproject.toml  tester.py  yark.py  yark.spec
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/workflows/: docker.yml
api/: .gitignore  Cargo.toml  README.md  testmanager.json
api/src/: auth.rs  config.rs  directory.rs  errors.rs  main.rs  manager.rs  report.rs  routes.rs  state.rs
api/testarchive/: yark.json
archive/: Cargo.toml  README.md
archive/src/: archive.rs  date.rs  elements.rs  errors.rs  images.rs  lib.rs  manager.rs  note.rs  owner.rs  prelude.rs  video.rs
examples/: Flow.drawio  basic.py  madness.py
lastgen/: .gitignore  Cargo.toml  README.md  lastgen.py  pyproject.toml
lastgen/examples/: madness.py
lastgen/lastgen/: channel.py  errors.py  reporter.py  utils.py
lastgen/src/: errors.rs  lib.rs
lastgen/yark/: __init__.py  channel.py  errors.py
templates/: base.html  channel.html  index.html  open.html  video.html
ui/: Program.cs  YarkUi.sln  _Imports.razor  package-lock.json  package.json
ui/Pages/: Counter.razor  FetchData.razor  Index.razor
ui/Properties/: launchSettings.json
ui/Shared/: MainLayout.razor  MainLayout.razor.css  NavMenu.razor  SurveyPrompt.razor
ui/YarkApiClient/: AdminContext.cs  Archive.cs  ArchiveMeta.cs  Context.cs  Elements.cs  Explorer.cs  ExplorerFile.cs  File.cs  FileLevel.cs  MessageIdResponse.cs  Note.cs  Report.cs  ReportFocus.cs  Snapshot.cs  Video.cs  VideoCollection.cs  VideoCollectionSnapshot.cs  VideoReport.cs  Videos.cs
ui/YarkApiClient.Tests/: ArchiveMeta.cs  ArchiveMetaTests.cs  ElementsTests.cs  Expected.cs  NoteTests.cs  SnapshotTests.cs  UnitTest1.cs  VideoCollection.cs  VideoTests.cs  YarkApiClient.Tests.csproj
ui/YarkBlazor/: ArchiveLayout.razor  CardKind.cs  HistoryItem.cs  IconKind.cs  MainLayout.razor  Program.cs  RecentArchive.cs  RecentArchiveCollection.cs  StartCardKind.cs  StartLayout.razor  TimeAgo.cs  YarkBlazor.csproj  _Imports.razor
ui/YarkBlazor/Components/: Logo.razor  Sidebar.razor  Sidebar.razor.css  SidebarButton.razor  SidebarButton.razor.css  SidebarButtonInner.razor  VideoChart.razor  VideoDescription.razor  VideoHistory.razor  VideoHistoryItem.razor  VideoHistoryTag.razor  VideoLineChart.razor  VideoList.razor  VideoPreview.razor
ui/YarkBlazor/Pages/: Index.razor
ui/YarkBlazor/Properties/: launchSettings.json
ui/YarkBlazor/wwwroot/: index.html
ui/src/: app.html
ui/src/components/: Navbar.svelte  VideoOverview.svelte
ui/src/lib/: api.ts  archive.ts  serialdeserial.ts  state.ts  state_json.ts  utils.ts
ui/src/routes/: +layout.server.ts  +page.server.ts  +page.svelte  +page.ts
ui/static/css/: global.css
ui/wwwroot/: index.html
ui/wwwroot/css/: app.css
ui/wwwroot/sample-data/: weather.json
yark/: Makefile  README.md  __init__.py  __main__.py  archive.py  channel.py  cli.py  config.py  converter.py  convertjank.py  errors.py  logger.py  pyproject.toml  reporter.py  utils.py  video.py  viewer.py
yark-api/: Makefile  README.md  __init__.py  launcher.py  pyproject.toml
yark-api/yark_api/: __init__.py  config.py  extensions.py  models.py
yark-api/yark_api/routes/: __init__.py  archive.py  misc.py  note.py  thumbnail.py  utils.py  video.py  video_file.py
yark-api/yark_api/schemas/: __init__.py  archive_get.py  archive_post.py  thumbnail_get.py  video_brief.py
yark-api/yark_api/schemas/inputs/: __init__.py  archive_get.py  archive_post.py  note.py  video_kind.py
yark-api/yark_api/schemas/outputs/: __init__.py  video_brief.py
yark-app/: package-lock.json  package.json  pyproject.toml
yark-app/yark_app/: __init__.py
yark-cli/: pyproject.toml  yark.spec
yark-cli/tests/: __init__.py  test_cli.py
yark-cli/tests/_data_/archives/: yark.json
yark-cli/yark_cli/: __init__.py  __main__.py  archive.py  archiver.py  checker.py  cli.py  new_cli.py  reporter.py  viewer.py
yark-pages/: Makefile  package-lock.json  package.json  svelte.config.js  tsconfig.json
yark-pages/src/: app.html
yark-pages/src-tauri/: Cargo.toml  tauri.conf.json
yark-pages/src-tauri/src/: main.rs
yark-pages/src/components/: Ball.svelte  Card.svelte  Dropzone.svelte  HistoryItem.svelte  Sidebar.svelte  VideoBrief.svelte
yark-pages/src/lib/: archive.ts  components.ts  element.ts  federated.ts  store.ts  (+2 more)
yark-viewer/: pyproject.toml
yark-viewer/yark_viewer/: browser.py  viewer.py
yark/archiver/: archive.py  comment_author.py  config.py  converter.py  element.py  logger.py  migrator.py  parent.py  playlist.py  reporter.py  video.py
yark/archiver/video/: comment_author.py  comments.py  element.py  image.py  note.py  video.py
yark/templates/: archive.html  base.html  channel.html  index.html  video.html
yark/tests/: __init__.py
yark/tests/_data_/temp/: raw_metadata.pkl
yark/tests/archive/: __init__.py  test_archive.py  test_config.py
yark/tests/archive/videos/: test_comment.py  test_comment_author.py  test_video.py  test_videos.py
yark/yark/: __init__.py  __main__.py  cli.py  errors.py  exceptions.py  launcher.py  logger.py  utils.py  viewer.py
yark/yark/archiver/: archive.py  comment_author.py  config.py  converter.py  logger.py  migrator.py  parent.py  reporter.py
yark/yark/archiver/video/: comments.py  element.py  note.py  video.py
yark/yark/archiving/archive/: serialization.py
yark/yark/archiving/archive/data/: __init__.py  archive.py  comment_author.py  element.py  serialization.py
yark/yark/archiving/archive/data/video/: __init__.py  comment.py  comments.py  data.py  image.py  note.py  videos.py
yark/yark/archiving/archiver/: converter.py  download.py  logger.py  manager.py  reporter.py
yark/yark/archiving/archiver/migration/: __init__.py  abstraction.py  migrator.py  v1.py  v2.py  v3.py  v4.py
yark/yark/archiving/config/: data.py
yark/yark/templates/: base.html  index.html
yark/yark/utils/: __init__.py  yt.py
yark/yark/versioning/: pypi.py
yark/yark/viewer/: browser.py
(+79 files in other folders)
