[tool.poetry]
name = "yark"
version = "1.2.4"
description = "YouTube archiving made simple."
authors = ["Owen Griffiths <root@ogriffiths.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/owez/yark"
classifiers = [
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Multimedia :: Video",
]
include = [{ path = "templates/*" }]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
requests = "^2.28.2"
colorama = "^0.4.6"
yt-dlp = "^2023.1.6"
progress = "^1.6"

[tool.poetry.scripts]
yark = "yark.cli:_cli"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
poethepoet = "^0.18.1"
types-colorama = "^0.4.15.4"
types-requests = "^2.28.11.8"
black = "^22.12.0"

[tool.poe.tasks]
lint = { shell = "set -e && mypy yark examples/madness.py" }
fmt = "black yark examples/madness.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
