[tool.poetry]
name = "yark"
version = "1.2.4"
description = "YouTube archiving made simple."
authors = ["Owen Griffiths <root@ogriffiths.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/owez/yark"
classifiers = [
    "Private :: Do not Upload",
] # NOTE: work around for poetry #1537 <https://github.com/python-poetry/poetry/issues/1537>

[tool.poetry.dependencies]
python = "~3.11"
Flask = "^2.2.2"
requests = "^2.28.2"
colorama = "^0.4.6"
yt-dlp = "^2023.1.6"
progress = "^1.6"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
poethepoet = "^0.18.1"
types-colorama = "^0.4.15.4"
types-requests = "^2.28.11.8"
black = "^22.12.0"
pyinstaller = "^5.7.0"

[tool.poetry.scripts]
yark = "yark.cli:_cli"

[tool.poe.tasks]
lint = { shell = "set -e && mypy yark examples/madness.py" }
fmt = "black yark examples/madness.py"
build = "pyinstaller yark.spec"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
