[package]
name = "yark-api"
description = "REST API for web-based Yark instances"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
log = "0.4"
axum = "0.6"
hyper = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
yark-archive = { path = "../archive" }
