[package]
name = "yark-api"
description = "REST API for web-based Yark instances"
version = "0.1.0+apispec.1"
edition = "2021"
readme = "README.md"
publish = false

[dependencies]
log = "0.4"
axum = "0.6"
hyper = "0.14"
tower = "0.4"
dotenv = "0.15"
axum-auth = "0.4"
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
axum-extra = { version = "0.7", features = ["async-read-body"] }
yark-archive = { path = "../archive" }
tower-http = { version = "0.4", features = ["cors", "fs"] }