[package]
name = "yark-archive"
description = "Archiving core & utilities for the Yark archive format"
version = "3.1.0-beta.1"
edition = "2021"

[dependencies]
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
chrono = { git = "https://github.com/chronotope/chrono", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
