[package]
name = "yark-archive"
description = "Archiving core & utilities for the Yark archive format"
version = "0.1.0+spec.3"
edition = "2021"
readme = "README.md"

[dependencies]
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
chrono = { git = "https://github.com/chronotope/chrono", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
