[tool.poetry]
name = "lastgen"
description = "Stripped and portable previous generation core/downloader/migrator logic for Yark"
version = "0.1.0"
authors = ["Owen Griffiths <root@ogriffiths.com>"]
readme = "README.md"
repository = "https://github.com/owez/yark"
classifiers = [
    "Private :: Do not Upload",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
yt-dlp = "^2023.3.4"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
types-requests = "^2.28.11.17"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
