[tool.poetry]
name = "yark-app"
version = "0.1.0"
description = "Official management suite for Yark"
authors = ["Owen Griffiths <root@ogriffiths.com>"]
license = "MIT"
packages = [{ include = "yark_app" }]
classifiers = [
    "Private :: Do not Upload",
] # NOTE: work around for poetry #1537 <https://github.com/python-poetry/poetry/issues/1537>

[tool.poetry.dependencies]
python = "~3.11"
falcon = "^3.1.1"
yark = { path = "../yark" }

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
poethepoet = "^0.18.1"
black = "^22.12.0"
pylint = "^2.15.10"

[tool.poe.tasks]
lint = { shell = "set -e && mypy yark_app --strict && pylint yark_app" }
fmt = "black yark_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
