[tool.poetry]
name = "yark-viewer"
version = "0.1.0"
description = ""
authors = ["Owen Griffiths <root@ogriffiths.com>"]
maintainers = ["NewWars <15692866+OriDevTeam@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "yark_viewer"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
