[tool.poetry]
name = "yark"
version = "1.2.4"
description = "YouTube archiving made simple (Library)"
authors = ["Owen Griffiths <root@ogriffiths.com>"]
maintainers = ["NewWars <15692866+OriDevTeam@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/owez/yark"

[tool.poetry.dependencies]
python = "~3.11"
requests = "^2.28.2"
yt-dlp = "^2023.1.6"
progress = "^1.6"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
poethepoet = "^0.18.1"
types-colorama = "^0.4.15.4"
types-requests = "^2.28.11.8"
black = "^22.12.0"
pylint = "^2.16.1"

[tool.poe.tasks]
lint = { shell = "set -e && mypy yark --strict && pylint yark" }
fmt = "black yark"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
